// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild commonjs with top-level entry > module code snapshots > ./index.js 1`] = `
"// src/entry.js
var entry_exports = {};
__export(entry_exports, {
  x: () => x
});
module.exports = __toCommonJS(entry_exports);
var import_dep = __toESM(require("./src/dep.js"));
var x = (0, import_dep.default)(1, 2);
console.log(x);"
`;

exports[`esbuild commonjs with top-level entry > module code snapshots > ./src/dep.js 1`] = `
"module2.exports = function add2(a, b) {
  return a + b;
};"
`;

exports[`esbuild iife > module code snapshots > ./index.js 1`] = `
"// src/entry.js
var import_dep = __toESM(require("./src/dep.js"));
var x = (0, import_dep.default)(1, 2);
console.log(x);"
`;

exports[`esbuild iife > module code snapshots > ./src/dep.js 1`] = `
"module.exports = function add2(a, b) {
  return a + b;
};"
`;

exports[`esbuild iife minified > module code snapshots > ./index.js 1`] = `
"var s = g(require("./module-0.js")),
  b = (0, s.default)(1, 2);
console.log(b);"
`;

exports[`esbuild iife minified > module code snapshots > ./module-0.js 1`] = `
"c.exports = function (o, t) {
  return o + t;
};"
`;

exports[`esbuild minified > module code snapshots > ./index.js 1`] = `
"var k = {};
b(k, {
  x: () => a
});
module.exports = j(k);
var x = h(require("./module-0.js")),
  a = (0, x.default)(1, 2);
console.log(a);"
`;

exports[`esbuild minified > module code snapshots > ./module-0.js 1`] = `
"p.exports = function (o, t) {
  return o + t;
};"
`;

exports[`esbuild scope-hoisted esm > single module bundle 1`] = `
"var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all) __defProp(target, name, {
    get: all[name],
    enumerable: true
  });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from)) if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
      get: () => from[key],
      enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
    });
  }
  return to;
};
var __toCommonJS = mod => __copyProps(__defProp({}, "__esModule", {
  value: true
}), mod);

// src/star.js
var star_exports = {};
__export(star_exports, {
  add: () => add
});
module.exports = __toCommonJS(star_exports);

// src/dep3.js
function add(a, b) {
  return a + b;
}"
`;
